compiler/fir/analysis-tests/testData/resolve/nestedInnerTypeAliases/innerOnTopLevelTypeAlias.kt
// RUN_PIPELINE_TILL: FRONTEND
class C

<!WRONG_MODIFIER_CONTAINING_DECLARATION("inner; file")!>inner<!> typealias TA = C
